# doacorrection

./: README.md  requirements.txt
demucs/: package.xml  setup.cfg  setup.py
demucs/demucs/: demucs.py  writewav.py
demucs/denoiser/: audio.py  data.py  demucs.py  enhance.py  evaluate.py  executor.py  live.py  solver.py
demucs/pretrained_model/: best.th
doaoptimizer/: package.xml  setup.cfg  setup.py
doaoptimizer/doaoptimizer/: doaoptimizer.py
online_sqa/: package.xml  setup.cfg  setup.py
online_sqa/online_sqa/: online_sqa.py
